[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linkedin-jobs-scraper"
version = "0.1.0"
description = "Python SDK for the LinkedIn Jobs Scraper Apify actor — 40+ enrichment fields per job: salary parser (USD-normalized, tier), 200+ skills extraction, benefits parser, work-mode classifier, seniority normalizer, job category auto-detect, apply method, location parser (city/state/country), DEI signals, US pay transparency law detection, recruiter score 0-100, 3-variant outreach pitches, one-click LinkedIn outreach links. No login. $0.003 per job."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "ApiVault Labs" }]
keywords = [
    "linkedin", "linkedin-jobs", "linkedin-jobs-api",
    "linkedin-jobs-scraper", "linkedin-job-scraper",
    "linkedin-without-login", "linkedin-without-api-key",
    "linkedin-public-jobs", "linkedin-jobs-search",
    "linkedin-recruiter-alternative",
    "job-scraper", "job-board-scraper", "job-search-api",
    "job-aggregator", "job-listings-api",
    "salary-parser", "salary-benchmarking", "compensation-data",
    "skills-extraction", "skills-taxonomy",
    "recruiter-tools", "recruitment-tech", "ats-data",
    "ats-alternative", "applicant-tracking",
    "sourcing-tool", "talent-acquisition",
    "lead-generation", "b2b-lead-gen", "crm-enrichment",
    "outreach-automation", "cold-email", "sales-intelligence",
    "remote-jobs-api", "diversity-hiring", "pay-transparency",
    "hiring-trends", "labor-market-data",
    "web-scraping", "apify", "apify-actor", "python-sdk",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Human Resources",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/apivault-labs/linkedin-jobs-scraper-python"
Documentation = "https://github.com/apivault-labs/linkedin-jobs-scraper-python#readme"
"Apify Actor" = "https://apify.com/apivault_labs/linkedin-jobs-scraper"
"Bug Tracker" = "https://github.com/apivault-labs/linkedin-jobs-scraper-python/issues"

[tool.setuptools.packages.find]
include = ["linkedin_jobs*"]
